[tool.poetry]
name = "biodiversitiy-map-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-rdf-io = {path = "../..", develop = true}
django-extensions = "^3.2.3"
django-skosxl = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
